--- a/index.html
+++ b/index.html
@@ -2,25 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>首页</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css">
     <script src="js/jquery-3.3.1.min.js"></script>
+    <title>首页</title>
 </head>
 <body>
     <a href="http://localhost:8089/admin">admin</a><br>
     <a href="http://localhost:8089/module">module</a><br>
     <a href="http://localhost:8089/article">article</a>
-
     <script>
-
       $(function () {
-
           $.ajax({
-
               type:"GET",
-              url:"http://localhost:8089/admin?callback=?", //访问的链接
+              url:"http://localhost:8089/admin", //访问的链接
               data:{},
-              dataType:"jsonp",  //数据格式设置为json
-              jsonpCallback: "m1",
+              dataType:"json",  //数据格式设置为json
               success:function(data){  //成功的回调函数
                   console.log(data);
                   console.log("success")
